# crioptografia-24-25

./: .env  .gitignore  README.txt  SOME.txt  community_1_files.json  community_2_files.json  community_3_files.json  encriptar.py  encrypt.py  files.json  main.py  models.py  pyproject.toml  reset_data.py  utils.py
auth/: __init__.py  auth_blueprint.py  certificate.py  models.py
certificates/communities/: Mi super comunidad_certificate.json  comunidad_certificate.json  super comunidad_certificate.json
certificates/keys/: app_public_key.pem  encrypted_app_private_key.pem
certificates/users/: cortesrodriguezpablo3@gmail.com_certificate.json  diego_certificate.json  ejemplo_certificate.json  pablo_certificate.json  test@test.com_certificate.json
communities/: communities_blueprint.py  models.py
instance/: users.db
templates/: app_base.html  communities.html  community.html  index.html  login.html  signup.html  upload.html
uploads/: user_1_SOME_encrypted.txt  user_2_ascii-art_encrypted.txt  user_3_archivoPrueba_encrypted.txt
