[tool.poetry]
name = "crioptografia-24-25"
version = "0.1.0"
description = ""
authors = ["Pablo Cortés Rodríguez <cortesrodriguezpablo3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
